[project]
name = "smpayout"
version = "0.1.0"
description = ""
authors = [
    {name = "pysashapy",email = "sasha.2000ubr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyserial (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
smpayout = 'smpayout.cmd:run'
