[project]
name = "smpayout"
version = "0.1.1"
description = ""
authors = [
    {name = "pysashapy",email = "sasha.2000ubr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyserial (>=3.5,<4.0)"
]

[project.scripts]
smpayout = 'smpayout.cmd:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"